templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: label-studio
  labels:
    app: label-studio
spec:
  ports:
  - port: 8080
  selector:
    app: label-studio
