templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: label-studio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # https://github.com/heartexlabs/label-studio/issues/1924#issuecomment-1022116206
      # https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
      - pathType: Prefix
        path: /label-studio(/|$)(.*)
        backend:
          service:
            name: label-studio
            port:
              number: 8080
